--- a/3tier-bad/roles/config.roles/tasks/main.yml
+++ b/3tier-bad/roles/config.roles/tasks/main.yml
@@ -1,9 +1,8 @@
 ---
-- hosts: all
-  name: Yum repository configuration
-  tasks:
-    - name: enable repos
-      template:
-        src: files/open_three-tier-app.repo
-        dest: /etc/yum.repos.d/open_three-tier-app.repo
-        mode: 0644
+- name: Yum repository configuration
+  copy:
+     src: files/open_three-tier-app.repo
+     dest: /etc/yum.repos.d/open_three-tier-app.repo
+     mode: 0644
+     backup: yes
+
