--- a/3tier-bad/bad-playbook.yml
+++ b/3tier-bad/bad-playbook.yml
@@ -21,21 +21,21 @@
 #  become: true
 
   tasks:
-  - name: http
-    package:
-      name: httpie
-      state: latest
-  - name: install HAProxy
-    yum:
-      name=haproxy state=latest
-  - name: enable HAProxy
-    service:
-      name: haproxy
-      state: started
-  - name: configure haproxy
-    template:
-      src: ./haproxy.cfg.j2
-      dest: /etc/haproxy/haproxy.cfg
+#  - name: http
+#    package:
+#      name: httpie
+#      state: latest
+#  - name: install HAProxy
+#    yum:
+#      name=haproxy state=latest
+#  - name: enable HAProxy
+#    service:
+#      name: haproxy
+#      state: started
+#  - name: configure haproxy
+#    template:
+#      src: ./haproxy.cfg.j2
+#      dest: /etc/haproxy/haproxy.cfg
   - name: restart HAproxy
     service:
       name: haproxy
