--- a/3tier-bad/roles/haproxy.role/tasks/main.yml
+++ b/3tier-bad/roles/haproxy.role/tasks/main.yml
@@ -11,7 +11,7 @@
   service:
     name: haproxy
     state: started
-    enable: yes
+    enabled: yes
 
 - name: Copy HA Proxy config file
   template:
