--- a/3tier-bad/roles/tomcat.role/tasks/main.yml
+++ b/3tier-bad/roles/tomcat.role/tasks/main.yml
@@ -10,7 +10,7 @@
   service:
     name: tomcat
     state: started
-    enable: yes
+    enabled: yes
 
 - name: create tomcat default web directory
   file:
