- add httpd and postgresql role

--- a/3tier-good/main.yml
+++ b/3tier-good/main.yml
@@ -11,5 +11,7 @@
 - hosts: apps
   roles:
     - tomcat.role
+    - httpd.role
+    - postgresql.role
 
-- include: bad-playbook.yml
+# - include: bad-playbook.yml
