--- a/3tier-good/bad-playbook.yml
+++ b/3tier-good/bad-playbook.yml
@@ -95,8 +95,8 @@
 #      src: index.html.app2
 #      dest: /usr/share/tomcat/webapps/ansible/index.html
 
-- name: deploy postgres
-  hosts: apps
+#- name: deploy postgres
+#  hosts: apps
 #  gather_facts: false
 ##   become: true
 ##   hosts: appdbs
