--- a/3tier-good/roles/postgresql.role/vars/main.yml
+++ b/3tier-good/roles/postgresql.role/vars/main.yml
@@ -1,5 +1,6 @@
 ---
 postgresql_user: "postgres"
+postgresql_groupi: "postgres"
 postgresql_version: "9.2"
 postgresql_data_dir: "/var/lib/pgsql/data"
 postgresql_bin_path: "/usr/bin"
